--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,9 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: ^0.5.3+4
-
+  flutter_screenutil: ^0.5.3
+  flustars: ^0.2.6+1
+  # common_utils: ^1.1.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
