--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,11 @@ flutter:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/smile.png
+    - assets/images/normal.png
+    - assets/images/sad.png
+    - assets/images/wc.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
